--- a/style.css
+++ b/style.css
@@ -1,1 +1,54 @@
-h1 {background-color:red}
+body{
+    background-color: black;
+}
+
+
+
+.perfil{
+    width: 160px;
+    height: 160px;
+    margin: 20px;
+}
+
+.container{
+    display: flex;
+     justify-content: center;
+     flex-direction: row;
+     
+
+}
+
+h1{color: #fff;
+    margin-left: 530px;
+   
+}
+
+button{ 
+
+    color: #FFFFFF;
+    background-color: black;
+    position: absolute;
+    left: 600px;
+    right: 600px;
+    top: 370px;
+    bottom: 210px;
+    
+    border: 1.5px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 8px;
+    
+   
+    
+    
+    
+
+    }
+
+
+
+   
+
+img{display: inline-block;
+    margin-left: 600px;
+    height: 50px;
+}
